--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,15 @@
-body
-h2{
-	padding: 1rem 2rem;
-	color: #fff;
-	background-image: -webkit-gradient(linear, left top, right top, from(#fa709a), to(#fee140));
-	background-image: -webkit-linear-gradient(left, #fa709a 0%, #fee140 100%);
-	background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+h2 {
+    padding: 1rem 2rem;
+    color: #fff;
+    background-image: -webkit-gradient(linear, left top, right top, from(#fa709a), to(#fee140));
+    background-image: -webkit-linear-gradient(left, #fa709a 0%, #fee140 100%);
+    background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+}
+body {
+    background: -moz-linear-gradient(top, #FFF, #FFC778 30%, #F89174 60%, #748af8);
+    background: -webkit-linear-gradient(top, #FFF, #FFC778 30%, #F89174 60%, #748af8);
+    background: linear-gradient(to bottom, #FFF, #FFC778 30%, #F89174 60%, #748af8);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
